--- a/Covid19/Help.resx
+++ b/Covid19/Help.resx
@@ -120,6 +120,18 @@
   <metadata name="gunaElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>71, 13</value>
   </metadata>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Как пользоваться программой:
+1. Кнопка "История" - история Covid19
+2. Кнопка "Симптомы"
+3. Кнопка  "Вакцинация"
+4. Кнопка "Карта"
+5. Кнопка "Тест"
+6. Кнопка "Профиль"
+7. Кнопка "Справка"
+8. Кнопка "О программе"
+</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
