--- a/Covid19/Help.resx
+++ b/Covid19/Help.resx
@@ -122,15 +122,13 @@
   </metadata>
   <data name="label1.Text" xml:space="preserve">
     <value>Как пользоваться программой:
-1. Кнопка "История" - история Covid19
-2. Кнопка "Симптомы"
-3. Кнопка  "Вакцинация"
-4. Кнопка "Карта"
-5. Кнопка "Тест"
-6. Кнопка "Профиль"
-7. Кнопка "Справка"
-8. Кнопка "О программе"
-</value>
+1) При нажатии на кнопку "История" происходит открытие страницы с историей возникновения заболевания
+2) При нажатии на кнопку "Симптомы" происходит открытие страницы с симптомами коронавируса
+3) При нажатии на кнопку "Вакцинация" происходит открытие страницы с картой актуальных мест проведения вакцинации
+4) При нажатии на кнопку "Карта" происходит открытие страницы с картой распространения коронавируса и активностью на улицах городов мира
+5) При нажатии на кнопку "Тест" происходит открытие страницы с тестом
+6) При нажатии на кнопку "Дневник" происходит открытие страницы с дневником болезни пользователя
+7) При нажатии на кнопку "О программе" происходит открытие окна с информацией о программе</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
